--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^3.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7"
   },
